@@ -110,6 +110,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - LaTeX                  Matthais Pospiech
 - Lisp                   Roberto Rossi
 - Locomotive Basic       Nacho Cabanes
+- Logtalk                Paulo Moura
 - LOLcode                Benny Baumann
 - LScript                Beau McGuigan
 - LSL2                   William Fry
